add_library(jrasmcore STATIC
	CommandLine.cpp
	Common.cpp
	Context.cpp
	Directive.cpp
	DisasmDumper.cpp
	ErrorLog.cpp
	Expr.cpp
	FormatCJR.cpp
	FormatDump.cpp
	Generator.cpp
	Generator_M6800.cpp
	Macro.cpp
	MMLParser.cpp
	Operator.cpp
	Parser.cpp
	PCGChar.cpp
	PCGColor.cpp
	PCGData.cpp
	PCGPage.cpp
	PCGRange.cpp
	Region.cpp
	Segment.cpp
	Token.cpp
	Tokenizer.cpp
)
